--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>
-      refine - Build your React-based CRUD applications, without constraints.
+      Jinjat -
     </title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<!--    https://stackoverflow.com/questions/32759272/how-to-load-css-asynchronously-->
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet" media="print" onload="this.media='all'; this.onload = null">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
